<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">
        Braintree Demo
    </string>

    <!-- MainActivity -->
    <string name="reset">
        Reset
    </string>

    <string name="settings">
        Settings
    </string>

    <string name="nonce_placeholder">
        Nonce: %s
    </string>

    <string name="ideal_id_placeholder">
        iDEAL payment id: \n %s
    </string>

    <string name="ideal_status_placeholder">
        iDEAL payment status: \n %s
    </string>

    <string name="device_data_placeholder">
        Device Data: %s
    </string>

    <string name="drop_in">
        Drop-In
    </string>

    <string name="google_pay">
        Google Pay
    </string>

    <string name="paypal_button">
        @string/paypal
    </string>

    <string name="visa_checkout_button">
        Visa Checkout
    </string>

    <string name="ideal_button">
        Pay with iDEAL
    </string>

    <string name="ideal_bank_icon">
        iDEAL bank icon
    </string>

    <string name="local_payments_button">
        Local Payments
    </string>

    <string name="cards">
        Credit or Debit Cards
    </string>

    <string name="create_transaction">
        Create a Transaction
    </string>

    <string name="loading">
        Loading…
    </string>

    <string name="buy">
        Buy
    </string>

    <string name="payment_icon">
        payment icon
    </string>

    <!-- CardActivity -->
    <string name="purchase">
        Purchase
    </string>

    <string name="send_sms">
        Send SMS
    </string>

    <string name="sms_auth_code">
        SMS Auth Code
    </string>

    <!-- CreateTransactionActivity -->
    <string name="processing_transaction">
        Processing Transaction
    </string>

    <string name="transaction_failed">
        Transaction Failed
    </string>

    <string name="transaction_complete">
        Transaction Complete
    </string>

    <!-- Settings -->
    <string name="empty">

    </string>

    <string name="none">
        None
    </string>

    <string name="options">
        Options
    </string>

    <string name="sandbox">
        Sandbox
    </string>

    <string name="production">
        Production
    </string>

    <string name="authorization">
        Authorization
    </string>

    <string name="tokenization_key">
        Use Tokenization Key
    </string>

    <string name="tokenization_key_summary">
        Use tokenization key for authorizing requests
    </string>

    <string name="customer">
        Customer
    </string>

    <string name="customer_summary">
        The customer id to use
    </string>

    <string name="merchant_account">
        Merchant Account
    </string>

    <string name="empty_merchant_account">
        Not specifying a merchant account will use the default merchant account. \n\nMerchant Account: %s
    </string>

    <string name="collect_device_data">Collect Device Data</string>
    <string name="collect_device_data_summary">Collects device data for fraud purposes</string>
    <string name="android_pay">Android Pay</string>
    <string name="usd">USD</string>
    <string name="us">US</string>
    <string name="android_pay_require_shipping_address">Require Shipping Address</string>
    <string name="android_pay_require_shipping_address_summary">Require shipping address from the user</string>
    <string name="android_pay_require_phone_number">Require Phone Number</string>
    <string name="android_pay_require_phone_number_summary">Require phone number from the user</string>
    <string name="android_pay_currency_title">Currency</string>
    <string name="android_pay_currency_summary">Must be ISO–4217 format. \n\nCurrency: %s</string>
    <string name="android_pay_allowed_countries_for_shipping_title">Allowed countries for shipping</string>
    <string name="android_pay_allowed_countries_for_shipping_summary">Must be ISO–3166–2, separate by comma for multiple countries. \n\nCountries: %s</string>
    <string name="google_payment_require_billing_address">Require Billing Address</string>
    <string name="google_payment_require_billing_address_summary">Require billing address from the user</string>
    <string name="google_payment_allow_prepaid_cards">Allow Prepaid Cards</string>
    <string name="google_payment_allow_prepaid_cards_summary">Allow the user to use prepaid cards as a payment method</string>
    <string name="google_payment_require_email">Require Email Address</string>
    <string name="google_payment_require_email_summary">Require email address from the user</string>
    <string name="paypal">PayPal</string>
    <string name="paypal_use_hardcoded_configuration">Use Hardcoded Configuration</string>
    <string name="paypal_use_hardcoded_configuration_summary">Use the configuration included in the PayPal SDK instead of downloading new configuration</string>
    <string name="paypal_request_address_scope">Request Address Scope</string>
    <string name="paypal_request_address_scope_summary">Request address scope from the user</string>
    <string name="three_d_secure">3D Secure</string>
    <string name="enable_three_d_secure">Enable 3D Secure</string>
    <string name="enable_three_d_secure_summary">3D Secure will automatically be run on all Card payment methods</string>
    <string name="require_three_d_secure">Require 3D Secure</string>
    <string name="require_three_d_secure_summary">Requires a successful authentication for 3D Secure transactions</string>
    <string name="paypal_disable_signature_verification">Disable app switch signature verification</string>
    <string name="paypal_disable_signature_verification_summary">Allows app switch with a PayPal Wallet app that is not signed</string>
    <string name="paypal_single_payment">Single Payment</string>
    <string name="paypal_billing_agreement">Billing Agreement</string>
    <string name="paypal_intent_type">Intent Type</string>
    <string name="paypal_landing_page_type">Landing Page Type</string>
    <string name="paypal_intent_authorize">Authorize</string>
    <string name="paypal_intent_order">Order</string>
    <string name="paypal_intent_sale">Sale</string>
    <string name="paypal_display_name">Display Name</string>
    <string name="paypal_display_name_summary">Name to be displayed in the PayPal flow</string>
    <string name="paypal_landing_page_type_billing">Billing</string>
    <string name="paypal_landing_page_type_login">Login</string>
    <string name="venmo">Venmo</string>
    <string name="vault_venmo">Vault Venmo</string>
    <string name="vault_venmo_summary">Vault Venmo payment methods on creation. Requires a customer id to be set.</string>
    <string name="amex">Amex</string>
    <string name="amex_rewards_balance">Get Rewards Balance</string>
    <string name="amex_rewards_balance_summary">Fetch Amex Rewards Balance on Card Tokenization. Requires a Client Token and relevant configurations.</string>

    <!-- PayPalActivity -->
    <string name="paypal_wallet_available">PayPal Wallet app available for app switch: %b</string>
    <string name="paypal_credit_offered">Offer PayPal Credit</string>
    <string name="paypal_credit_offered_summary">Offers PayPal Credit prominently in the payment flow</string>
    <string name="paypal_useraction_commit_title">Set Useraction to Commit</string>
    <string name="paypal_useraction_commit_summary">Sets the Payment User Action to Commit for Express Checkout Transactions</string>
    <string name="paypal_address_override">Send a shipping address to PayPal</string>
    <string name="paypal_address_override_summary">Sends a shipping address as an override option to PayPal for any PayPal request</string>
</resources>
