<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_payment_prompt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:typeface="serif"
            tools:text="@string/payment_prompt" />

        <com.braintreepayments.cardform.view.CardForm
            android:id="@+id/card_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="16dp" />

        <Button
            android:id="@+id/unionpay_enroll_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:onClick="sendSms"
            android:text="@string/send_sms"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sms_code_container"
            style="@style/text_input_layout"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:labelFor="@+id/sms_code"
            android:visibility="gone">

            <com.braintreepayments.cardform.view.ErrorEditText
                android:id="@+id/sms_code"
                style="@style/card_form_field"
                android:contentDescription="@string/sms_auth_code" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/purchase_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:enabled="false"
            android:onClick="onPurchase"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/purchase" />

    </LinearLayout>

</ScrollView>